@@ -12,6 +12,10 @@ What's new in Python 3.0b1?
 Core and Builtins
 -----------------
 
+- Issue #2957: Corrected a ValueError "recursion limit exceeded", when
+  unmarshalling many code objects, which happens when importing a
+  large .pyc file (~1000 functions).
+
 - Issue #2963: fix merging oversight that disabled method cache for
   all types.
 
